--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h4 my-2">About me</h2>
-        <p>Certified Siemens Teamcenter and NX professional with a Bachelor of Technology in Production engineering. Skilled in Product Lifecycle Management, Computer-Aided Design (CAD). Working as an Applications Engineer with a total of 9.5 + years of experience in the information technology and manufacturing domain.</p>
+        <p>Accomplished specialist in CAD PLM with expertise in Teamcenter, Active Workspace and Siemens NX. Professional engineer with a Bachelor of Technology in Production engineering with 10+ years of experience in the information technology and manufacturing domain.</p>
         <div class="row mt-3">
           <div class="col-sm-2">
             <div class="pb-1">Age:</div>
@@ -328,12 +328,13 @@
           <div class="card-body px-3 py-2">
             <p>Working as Lead Application Engineer on cloud (SaaS/Hybrid SaaS) projects</p>
             <ul>
-              <li>Functional testing, Integration testing, and Regression testing of Xcelerator Share (Web client), Siemens Connector, NX (Desktop clients), and other integrated applications</li>
-              <li>API testing using Postman</li>
-              <li>Responsible for Smoke testing, Sanity testing, Final product validation (FPV), and participation in UAT testing for different cloud applications</li>
-              <li>Test plan writing based on design and functional requirements using Polarion</li>
-              <li>Bug/Defect reporting and tracking using JIRA and Polarion</li>
-              <li>Coordination and support to cross-functional teams for other cloud projects (Xcelerator Share, Mold Connect, TC X, NX X, etc.)</li>
+              <li>Leading the QA projects for new functionalities, and enhancements for its entire QA cycle along with pre-integration, post-integration, and final product validation (FPV)</li>
+              <li>Functional, Integration, and Regression testing of Teamcenter X, NX, X, Xcelerator Share, and Siemens Connector applications</li>
+              <li>Participation in User Acceptance Testing (UAT), Beta/Early Access Program (EAP)</li>
+              <li>Requirements Analysis, Test plan writing based on design and functional requirements, and mapping requirements to test cases</li>
+              <li>Bug/Defect reporting, tracking using JIRA, Polarion, and validation of bugs</li>
+              <li>Customer problem report (PR) root cause analysis and validation</li>
+              <li>•	Coordination and support to cross-functional teams for other Teamcenter NX and cloud projects</li>
             </ul>
           </div>
         </div>
@@ -353,12 +354,13 @@
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Deputed at Siemens Industry Software (India) Private Limited (SISW), Pune</p>
-            <p>Worked as Lead Application Engineer on various NX Assemblies projects (Continues Release) .</p>
+            <p>Deputed at Siemens and Worked as Lead Application Engineer on various projects</p>
             <ul>
-              <li>Testing of NX Assembly and TCIN (Teamcenter NX Integration) modules </li>
-              <li>Test plan writing based on design, functional requirements in Polarion. Experience using JIRA</li>
-              <li>Automation test case development</li>
+              <li>Testing of NX Assemblies new functionalities, enhancements projects</li>
+              <li>Testing of Teamcenter NX integration usability enhancements and compatibility projects</li>
+              <li>Test plan writing based on design and functional requirements in Polarion</li>
+              <li>Bug/Defect reporting and tracking using JIRA and Polarion</li>
+              <li>Creation, execution, and submission of automated test cases</li>
             </ul>
           </div>
         </div>
@@ -379,11 +381,12 @@
           </div>
           <div class="card-body px-3 py-2">
             <ul>
-              <li>Manual functional testing on DEV, SIT and QA environments for different releases.</li>           
-              <li>Teamcenter 11.2 and Active Workspace 3.2 - Change Management</li>
-              <li>Customized NX 10 utilities/tools (Modeling /Drafting/Assembly/PMI/Sheet Metal/Manufacturing) as per functional requirements</li>
-              <li>Creating and managing the test scripts as per functional requirements using HP ALM 11 </li>
-              <li>Defect management using HP ALM 11 </li>
+              <li>Worked as lead for NX application testing on DEV, SIT, and QA environments for different releases</li>
+              <li>Estimation of activities by defining complexity and efforts required for the various stages of the project testing</li>
+              <li>Interaction with stakeholders to understand business use cases, and requirements and breaking down into smaller stories</li>
+              <li>Teamcenter/Active Workspace Change management testing</li>
+              <li>NX custom applications testing of different applications (Modeling, Drafting, Assemblies, PMI, Sheet Metal, Manufacturing) as per functional requirements</li>
+              <li>Creating and managing test cases as per functional requirements and Defect management using HP ALM</li>
             </ul>
           </div>
         </div>
@@ -404,12 +407,13 @@
           </div>
           <div class="card-body px-3 py-2">
             <ul>
-              <li>Design and development of cutting tool inserts having standard and special types as per customer requirement</li>
-              <li>Design of press tools required to manufacture cutting tool inserts using NX (6/8.5)-Teamcenter (8/10)</li>
-              <li>Design of entirely new special inserts as per customer requirement </li>
-              <li>Creation of 3D NX models and intermediate manufacturing drawings required in routine manufacturing process</li>
-              <li>Support to Computer aided process planning</li>
-              <li>Project- Redesign of press tools and its related drawings from old cad system using Teamcenter NX integration</li>
+              <li>Design of cutting tool inserts data (3D models, Drawings, Data for manufacturing) using NX</li>
+              <li>Design of press tools of special inserts using Teamcenter and NX</li>
+              <li>Design of new standard and special inserts in native NX as per the customer requirement and communication from the marketing team about the application of the insert</li>
+              <li>Registration of insert and press tool drawing in IMS (Drawing Database)</li>
+              <li>Converting press tool data and related drawings from the old CAD system to Teamcenter</li>
+              <li>Interaction with Planning, Production, and Marketing departments</li>
+              <li>Training of Teamcenter NX to trainee engineers</li>
             </ul>
           </div>
         </div>
@@ -430,10 +434,13 @@
           </div>
           <div class="card-body px-3 py-2">
             <ul>
-              <li>Responsible for maintaining standard component library in Teamcenter with parametric modeling (Part Family Approach) and assemblies </li>
-              <li>Giving support to other design department and designers situated worldwide for 3D Modeling, Assembly and Drafting using Teamcenter 9 and NX 8.5 integration</li>
-              <li>Creating items in Teamcenter with structures (Bill of materials)</li>
-              <li>Item cleansing and creation work for some BU’s (Like port crane, straddle carrier) with their legacy data</li>
+              <li>Data management using Teamcenter</li>
+              <li>Responsible for maintaining the standard component library in Teamcenter with parametric modeling (Part Family approach) and Assemblies</li>
+              <li>Creating items and bill of materials (BOM) in Teamcenter</li>
+              <li>Releasing items to production through Teamcenter workflows</li>
+              <li>Support for designers and other design departments situated worldwide for 3D Modeling, Drafting, and Assemblies</li>
+              <li>Support to data migration from legacy system to Teamcenter</li>
+              <li>Item cleansing and creation work for some business units (Port Crane, Straddle Carrier) with their legacy data</li>
             </ul>
           </div>
         </div>
