--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 </div>
 
 <div class="section px-2 px-lg-4 pt-5" id="community">
-  <div class="container">
+  <div class="container-narrow">
     <div class="text-center mb-5">
       <h2 class="marker marker-center">Community of Practice </h2>
     </div>
