--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
               <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
               <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
               <li class="nav-item"><a class="nav-link" href="#certifications">Certifications</a></li>
-              <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+              <!-- <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li> -->
               <!-- <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>  -->
-              <li class="nav-item"><a class="nav-link" href="portfolio.html" target="_blank">Portfolio</a></li>                            
+              <li class="nav-item"><a class="nav-link" href="#portfolio" target="_blank">Portfolio</a></li>                            
             </ul>
           </div>
         </div>
@@ -402,7 +402,7 @@
   </div>  
 </div>
 
-<div class="section px-2 px-lg-4 pt-5">
+<div class="section px-2 px-lg-4 pt-5" id="portfolio">
   <div class="container">
     <div class="text-center mb-5">
       <h2 class="marker marker-center">Portfolio</h2>
