--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h4 my-2">About me</h2>
-        <p>Accomplished specialist in CAD PLM with expertise in Teamcenter, Active Workspace and Siemens NX. Professional engineer with a Bachelor of Technology in Production engineering with 10+ years of experience in the information technology and manufacturing domain.</p>
+        <p>Focused CAD PLM Specialist offering over 10 years of rich experience with expertise in Teamcenter, Active Workspace, and Siemens NX.</p>
         <div class="row mt-3">
           <div class="col-sm-2">
             <div class="pb-1">Age:</div>
