--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
         </div>
       </div>
     </div>
-  </div>
-  
+  </div>  
               
   <div class="wave-bg"></div>
 </header>
@@ -321,9 +320,40 @@
   
   <div class="container-narrow">
     <h2 class="h4 my-2 text-center" >NX Customization</h2>
-    <div class="bg-light p-3">
-      <h5>NX Launhcer</h5>  
-
+    <div class="bg-light p-3">      
+      <div class="container">
+        <h5>NX Launcher</h5>
+        <div class="row">
+          <div class="col-sm">
+            <li>NX launhcer setup and configuration to run different versions of NX</li>
+            <li>Configuration of NX applications using different switches</li>
+            <ul>
+              <li>NX</li>
+              <li>NX Viewer</li>
+              <li>NX Simcenter 3D</li>
+              <li>NX Command Prompt</li>
+            </ul>
+          </div>
+          <div class="col-sm">
+            <div class="video">
+              <iframe style="display: block; margin: auto;" width="560" height="315" src="link" frameborder="0" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+        <br>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <img src="images/NX_Launcher/NX_Launcher.png" class="img-fluid">
+          </div>
+          <div class="col-sm">
+            <img src="images/NX_Launcher/NX_Versions.png" class="img-fluid">
+          </div>
+          <div class="col-sm">
+            <img src="images/NX_Launcher/NX_Applications.png" class="img-fluid">
+          </div>
+        </div>        
+      </div>
     </div>
   </div> 
   <!-- <div class="container-narrow">
